--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/Llega Rapidito.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.14.jar=lib/commons-codec-1.14.jar
 file.reference.controlsfx-8.40.14.jar=lib/controlsfx-8.40.14.jar
 file.reference.jfoenix-8.0.8.jar=lib/jfoenix-8.0.8.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.controlsfx-8.40.14.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.commons-codec-1.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
